2005-10-23  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (clean): Cleanup also subdirectory test.
	(MANIFEST): Exclude tramp2 and .cvsignore.

2005-10-11  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Bump version (to 2.0.52-pre).  Update merge
	version to 2.0.51.

2005-10-11  Steve Youngs  <steve@sxemacs.org>

	* Makefile.XEmacs (REQUIRES): Remove fsf-compat, add
	sh-script (for executable-find).

2005-10-08  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.51 released.

	* configure.ac: Bump version.

2005-08-28  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Bump version (to 2.0.51-pre).  Update merge
	version to 2.0.50.

2005-08-07  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.50 released.

	* configure.ac: Bump version.

2005-07-10  Michael Albinus  <michael.albinus@gmx.de>

	Update FSF's address in GPL notices.

	* configure.ac: Bump version (to 2.0.50-pre).  Update merge
	version to 2.0.49.

2005-05-14  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.49 released.

	* configure.ac: Bump version.

2005-04-03  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Bump version (to 2.0.49-pre).  Update merge
	version to 2.0.48.

2005-03-20  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.48 released.

	* configure.ac: Bump version.

	* Makefile.in (FTP_UPLOAD): Change upload address to
	"ftp://ftp-upload.gnu.org/incoming/ftp".
	(tar): Handle "$(TARNAME).tar.gz.directive".

2005-02-09  Kim F. Storm  <storm@cua.dk>

	Change release version from 21.4 to 22.1 throughout.

2005-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* INSTALL: Change bug report address to [tramp-devel@gnu.org].

2005-02-02  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Bump version (to 2.0.48-pre).  Update merge
	version to 2.0.47.  Change bug report address to
	[tramp-devel@gnu.org].

2005-01-16  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.47 released.

	* configure.ac: Bump version.
